--- a/uid/responsive-case-study/example.html
+++ b/uid/responsive-case-study/example.html
@@ -24,7 +24,7 @@
 		<section>
 			<h1>Collaborative Development
 			<span>Example: Nissan History Page</span></h1>
-			
+
 			<h2>Page Objectives</h2>
 			<p>The History page design and development began relatively late in the overall Nissan site build process. At that point, the main content page templates were already approved and developed on the QA site. This left creative flexibility only within the main content container within the template. The creative team was tasked to utilize this space to present the content on the Flash-based <a href="http://www.nissan-global.com/EN/HISTORY/" target="blank">Nissan Corporate History page</a> in a mobile-friendly, non-Flash, responsive format.</p>
 			<p>Rather than try to develop the concept independent of the rest of the team (and deliver something to "just plop in" to the empty content space), creative reached out to the project managers, IXD, and development <b>before producing any finalized concepts</b>. This allowed the team to collaborate on solutions to the challenges presented by the page requirements, and address potential issues <b>before promising any specific design or functionality to the client</b>.</p>
@@ -37,7 +37,7 @@
 				<li><span>To:</span> Stephanie Plumeri, Jessican Benoit, Colin Connor, Neha Pahwa, Sean Brittain</li>
 				<li><span>Subject:</span> NISS5538 &bull; <b>INTERNAL ONLY</b> - History Page</li>
 			</ul>
-			
+
 			<p>Hi All,</p>
 
 			<p>So.....I have done a <b>potential</b> History Page comp attached.</p>
@@ -70,7 +70,7 @@
 		</section>
 	</article>
 	<footer>
-		<p>tmp worldwide &nbsp;|&nbsp; april 2013</p>
+		<p>TMP &nbsp;|&nbsp; april 2013</p>
 	</footer>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="js/global.js"></script>
