--- a/uid/responsive-case-study/index.html
+++ b/uid/responsive-case-study/index.html
@@ -4,7 +4,7 @@
 <!--[if IE 9 ]><html lang="en" class="no-js ie9"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en" class="no-js"><!--<![endif]-->
 <head>
-	
+
 	<meta charset="utf-8"/>
 	<meta name="robots" content="noindex, nofollow"/>
 	<meta name="viewport" content="width=device-width"/>
@@ -35,11 +35,11 @@
 		<section id="intro">
 			<h1>Responsible Responsive Design
 			<span>Case Study: Nissan Global Careers Site</span></h1>
-			
+
 			<p>The Nissan Global Careers site is not only one of TMP's first fully responsive custom careers sites, but also one of the first to be developed through a more collaborative workflow between IXD, creative, and development. The team worked together from day one to discuss content, layout, and functionality, which allowed them to work out potential issues and avoid endless back-and-forth e-mails later on in the development process.</p>
-			
+
 			<p>This case study details the development process from both a procedural and a technical standpoint. Understanding the benefits of effective communication among team members early on in the responsive development process is as necessary to successful project completion as is knowing the general mechanics of responsive, mobile-first websites.</p>
-			
+
 			<p>Before moving on, <a href="http://www.ihighfive.com/" target="blank">Internet high fives</a> all around to the Nissan team:</p>
 			<ul>
 				<li><strong>Sean Brittain</strong> - Producer</li>
@@ -69,10 +69,10 @@
 				<dt>A.D. ("After Design")</dt>
 				<dd>The developer should continue to be looped in as revisions are made to site wireframes and mockups. A quick conversation only takes a few minutes and can save hours of back-and-forth when it comes time to actually build the site.</dd>
 			</dl>
-			
+
 			<p>The responsive development workflow should look more like this (which you may recognize from an earlier Digiknow):</p>
 			<a href="img/flowchart.jpg" class="example" target="blank"><img class="chart" src="img/flowchart.jpg" alt="Responsive development workflow chart"/></a>
-			
+
 			<p>For the Nissan site, the developer began building out basic wireframes in the browser <em>before</em> final creative was completed. This not only sped up development once creative was approved, but also helped the creative team design for mobile by showing them a living, <span class="breathe">breathing</span> version of the site that they were designing.</p>
 			<ul class="sidebyside">
 				<li><img src="img/wireframe-home.jpg" alt="Nissan site wireframes"/></li>
@@ -88,7 +88,7 @@
 				<li><img src="img/about-desktop.jpg" alt="Nissan website - desktop view"/></li>
 			</ul>
 			<p>Mobile first development focuses on building the site structure around <em>content</em>, not images or functionality. Before a single wire is put to frame, one question must be asked and answered: <strong>What do we want users to see first in a limited screen space?</strong></p>
-			<p>Discussions about content priority to optimize the user experience should be held early and often between all members of the project team: project managers, IXD, creative, copywriters, and developers. It is important to keep everyone in the loop, especially if (and when) the client requests new content or features are added, or to change existing site elements.</p> 
+			<p>Discussions about content priority to optimize the user experience should be held early and often between all members of the project team: project managers, IXD, creative, copywriters, and developers. It is important to keep everyone in the loop, especially if (and when) the client requests new content or features are added, or to change existing site elements.</p>
 			<dl>
 				<dt>Progressive enhancement</dt>
 				<dd>This content-focused strategy builds the basic site structure to be accessible on the lowest common denominator of browser, and treats additional styles and scripts as additional features that are <em>nice</em> but not <em>necessary</em> to deliver the site content to the end user.<br/><br/>
@@ -137,14 +137,14 @@
 			<h2>Compact Cars</h2>
 			<p><em>Note - this is the only car-related pun in this presentation. You can thank me later.</em></p>
 			<p>An important formula to remember when developing a site is: <strong>faster websites = better user experiences</strong>. This is especially the case for mobile browsing on a 3G/4G network.</p>
-			
+
 			<h3>Optimizing Nissan, byte by byte</h3>
 			<ul>
 				<li>Minified CSS and Javascript</li>
 				<li>Compressed images</li>
 				<li>Dynamic loading of thumbnail images in <a href="http://nissan-jobs.tmpqa.com/locations.html" target="blank">Locations page</a> accordion - only load when content is expanded</li>
 			</ul>
-			
+
 			<h3>Antisocial optimization</h3>
 			<p>The Nissan site, by design, has a social "slider" on the desktop version of the site. On touch screens/mobile devices, the full feeds do not load. Instead, the social icons function as plain links to Nissan's respective profile pages on those social networks.</p>
 			<p>How much weight do those feeds add to the page? Not to be rude, but social feeds are pretty <strong><em>fat</em></strong>. Take the Nissan Careers Culture Page, for example:</p>
@@ -157,7 +157,7 @@
 		<section id="play">
 			<h2>Go Play</h2>
 			<a id="sitelink" href="http://nissan-jobs.tmpqa.com" target="blank">Nissan Global Careers Site (in QA)</a>
-			
+
 			<h3>More on standards and accessibility:</h3>
 			<ul>
 				<li><a href="http://alistapart.com/article/dao" target="blank">A Dao of Web Design</a></li>
@@ -167,9 +167,9 @@
 		</section>
 	</article>
 	<footer>
-		<p>tmp worldwide &nbsp;|&nbsp; april 2013</p>
+		<p>TMP &nbsp;|&nbsp; april 2013</p>
 	</footer>
-	<script src="/js/ga.js"></script> 
+	<script src="/js/ga.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="js/bootstrap-scrollspy.js"></script>
 	<script src="js/global.js"></script>
