--- a/uid/responsive-case-study/example.html
+++ b/uid/responsive-case-study/example.html
@@ -4,11 +4,11 @@
 <!--[if IE 9 ]><html lang="en" class="no-js ie9"><![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en" class="no-js"><!--<![endif]-->
 <head>
-	<meta charset="utf-8"/>
-	<meta name="robots" content="noindex, nofollow"/>
-	<meta name="viewport" content="width=device-width"/>
+	<meta charset="utf-8">
+	<meta name="robots" content="noindex, nofollow">
+	<meta name="viewport" content="width=device-width">
 	<title>Responsible Responsive Development</title>
-	<link rel="stylesheet" href="css/global.css"/>
+	<link rel="stylesheet" href="css/global.css">
 	<!--[if lte IE 8 ]>
 		<script src="js/html5shiv.js"></script>
 		<script src="js/respond.min.js"></script>
@@ -51,18 +51,18 @@
 			<p>Let me know what you all think.</p>
 
 			<p>Thanks<br/>John</p>
-			<a href="img/history1.jpg" target="blank"><img src="img/history1.jpg" alt="Initial Nissan history page mockup"/></a>
+			<a href="img/history1.jpg" target="blank"><img src="img/history1.jpg" alt="Initial Nissan history page mockup"></a>
 		</section>
 		<section>
 			<h2>Feedback Round 1 (via email)</h2>
 			<p><em>(after responses from the team and testing some timeline scrolling plugins in-browser to determine feasibility)</em></p>
-			<a href="img/history2.jpg" target="blank"><img src="img/history2.jpg" alt="Initial Nissan history page mockup"/></a>
+			<a href="img/history2.jpg" target="blank"><img src="img/history2.jpg" alt="Initial Nissan history page mockup"></a>
 		</section>
 		<section>
 			<h2>Feedback Round 2 (team huddle)</h2>
 			<p><em>(after a <b>30 minute</b> team meeting to discuss concept and sketch out alernative wireframe concepts)</em></p>
-			<a href="img/sketch-mockups.jpg" target="blank"><img src="img/sketch-mockups.jpg" alt="IXD sketches drawn in team meeting"/></a>
-			<a href="img/history3.jpg" target="blank"><img src="img/history3.jpg" alt="Revised Nissan history page mockup"/></a>
+			<a href="img/sketch-mockups.jpg" target="blank"><img src="img/sketch-mockups.jpg" alt="IXD sketches drawn in team meeting"></a>
+			<a href="img/history3.jpg" target="blank"><img src="img/history3.jpg" alt="Revised Nissan history page mockup"></a>
 		</section>
 		<section>
 			<h2>Final Product</h2>
