--- a/uid/responsive-case-study/index.html
+++ b/uid/responsive-case-study/index.html
@@ -5,11 +5,11 @@
 <!--[if (gt IE 9)|!(IE)]><!--><html lang="en" class="no-js"><!--<![endif]-->
 <head>
 
-	<meta charset="utf-8"/>
-	<meta name="robots" content="noindex, nofollow"/>
-	<meta name="viewport" content="width=device-width"/>
+	<meta charset="utf-8">
+	<meta name="robots" content="noindex, nofollow">
+	<meta name="viewport" content="width=device-width">
 	<title>Responsible Responsive Development</title>
-	<link rel="stylesheet" href="css/global.css"/>
+	<link rel="stylesheet" href="css/global.css">
 	<!--[if lte IE 8 ]>
 		<script src="js/html5shiv.js"></script>
 		<script src="js/respond.min.js"></script>
@@ -71,12 +71,12 @@
 			</dl>
 
 			<p>The responsive development workflow should look more like this (which you may recognize from an earlier Digiknow):</p>
-			<a href="img/flowchart.jpg" class="example" target="blank"><img class="chart" src="img/flowchart.jpg" alt="Responsive development workflow chart"/></a>
+			<a href="img/flowchart.jpg" class="example" target="blank"><img class="chart" src="img/flowchart.jpg" alt="Responsive development workflow chart"></a>
 
 			<p>For the Nissan site, the developer began building out basic wireframes in the browser <em>before</em> final creative was completed. This not only sped up development once creative was approved, but also helped the creative team design for mobile by showing them a living, <span class="breathe">breathing</span> version of the site that they were designing.</p>
 			<ul class="sidebyside">
-				<li><img src="img/wireframe-home.jpg" alt="Nissan site wireframes"/></li>
-				<li><img src="img/roughdev-home.jpg" alt="Nissan wireframes in browser"/></li>
+				<li><img src="img/wireframe-home.jpg" alt="Nissan site wireframes"></li>
+				<li><img src="img/roughdev-home.jpg" alt="Nissan wireframes in browser"></li>
 			</ul>
 			<p>In addition, the project manager sent out every new round of wireframes and creative to all team members for feedback before being presented to the client. This allowed the team (especially the very picky developer) to flag any potential issues and develop several potential solutions to be presented as options on the client calls.</p>
 			<p>The <a href="example.html" target="blank">Nissan History page</a> is one of many pieces of the overall development process that exemplifies how the collaborative process can quickly and effectively resolve potential issues that may arise in creative, IXD, and/or programming.</p>
@@ -84,8 +84,8 @@
 		<section id="mobile">
 			<h2>Mobile First</h2>
 			<ul class="sidebyside">
-				<li><img src="img/about-mobile.jpg" alt="Nissan website - mobile view"/></li>
-				<li><img src="img/about-desktop.jpg" alt="Nissan website - desktop view"/></li>
+				<li><img src="img/about-mobile.jpg" alt="Nissan website - mobile view"></li>
+				<li><img src="img/about-desktop.jpg" alt="Nissan website - desktop view"></li>
 			</ul>
 			<p>Mobile first development focuses on building the site structure around <em>content</em>, not images or functionality. Before a single wire is put to frame, one question must be asked and answered: <strong>What do we want users to see first in a limited screen space?</strong></p>
 			<p>Discussions about content priority to optimize the user experience should be held early and often between all members of the project team: project managers, IXD, creative, copywriters, and developers. It is important to keep everyone in the loop, especially if (and when) the client requests new content or features are added, or to change existing site elements.</p>
@@ -110,8 +110,8 @@
 						<li>Avoid custom styling of dropdowns to allow native browser functionality to work properly.<br/><br/></li>
 					</ul>
 					<ul class="sidebyside">
-						<li><img src="img/form-behavior.jpg" alt="form behavior on iPad mini"/></li>
-						<li><img src="img/form-behavior-2.jpg" alt="form behavior on Android browser"/></li>
+						<li><img src="img/form-behavior.jpg" alt="form behavior on iPad mini"></li>
+						<li><img src="img/form-behavior-2.jpg" alt="form behavior on Android browser"></li>
 					</ul>
 				</li>
 				<li>Finger vs. Mouse
@@ -119,7 +119,7 @@
 						<li>Need to increase link sizes/hit points for "fat fingers" on touch screens.</li>
 						<li>Cannot rely on "hover" action trigger on touch screens - use "click" as a fallback.</li>
 					</ul><br/>
-					<img src="img/dropmenu.jpg" alt="dropdown hover menu"/>
+					<img src="img/dropmenu.jpg" alt="dropdown hover menu">
 				</li>
 			</ul>
 		</section>
