--- a/uid/rwd-school-of-rock/creative/spring/week-2.html
+++ b/uid/rwd-school-of-rock/creative/spring/week-2.html
@@ -17,7 +17,7 @@ section: creative-spring-2014-week-2
 
 		<ul class="dom-images" role="presentation">
 			<li><a href="http://www.imdb.com/title/tt0068646/">The Don<img src="../../img/don.jpg" alt="Don Vito Corleone"></a></li>
-			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="../../img/dom.jpg" alt="DOM diagram"/></a></li>
+			<li><a href="http://en.wikipedia.org/wiki/Document_Object_Model">The DOM<img src="../../img/dom.jpg" alt="DOM diagram"></a></li>
 		</ul>
 
 		<h3>Document Object Model</h3>
@@ -117,7 +117,7 @@ section: creative-spring-2014-week-2
 
 		<p>These diagrams, lovingly <a href="http://www.lukew.com/ff/entry.asp?1649">stolen from Luke Wroblewski</a>, illustrate the easiest and most difficult screen spaces for touch screen users to reach.</p>
 
-		<a href="../../img/touchpoints-enlarge.jpg" target="_blank"><img class="touchpoints" src="../../img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"/></a>
+		<a href="../../img/touchpoints-enlarge.jpg" target="_blank"><img class="touchpoints" src="../../img/touchpoints.jpg" alt="ergonomics of use for touch screen devices"></a>
 
 		<span class="small-caption">(click the image to open in a new window)</span>
 
