--- a/uid/rwd-school-of-rock/examples/offscreen/index.html
+++ b/uid/rwd-school-of-rock/examples/offscreen/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width"/>
-	<link rel="stylesheet" href="css/menu.css"/>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<link rel="stylesheet" href="css/menu.css">
 	<script>document.getElementsByTagName('html')[0].className = "js";</script>
 </head>
 
@@ -23,7 +23,7 @@
 
 		<main id="content">
 
-			<div class="banner" role="banner"><img src="img/banner-large.jpg" alt="FPO"/></div>
+			<div class="banner" role="banner"><img src="img/banner-large.jpg" alt="FPO"></div>
 
 				<article>
 
@@ -102,7 +102,7 @@
 
 				<section>
 
-					<img src="img/placeholder.jpg" alt="placeholder image"/>
+					<img src="img/placeholder.jpg" alt="placeholder image">
 
 					<h2>Module 1</h2>
 
@@ -112,7 +112,7 @@
 
 				<section>
 
-					<img src="img/placeholder.jpg" alt="placeholder image"/>
+					<img src="img/placeholder.jpg" alt="placeholder image">
 
 					<h2>Module 2</h2>
 
@@ -122,7 +122,7 @@
 
 				<section>
 
-					<img src="img/placeholder.jpg" alt="placeholder image"/>
+					<img src="img/placeholder.jpg" alt="placeholder image">
 
 					<h2>Module 3</h2>
 
@@ -132,7 +132,7 @@
 
 				<section>
 
-					<img src="img/placeholder.jpg" alt="placeholder image"/>
+					<img src="img/placeholder.jpg" alt="placeholder image">
 
 					<h2>Module 4</h2>
 
