--- a/uid/rwd-school-of-rock/qa/index.html
+++ b/uid/rwd-school-of-rock/qa/index.html
@@ -69,7 +69,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-1.jpg" alt=""/>
+      <img src="../img/fig-1.jpg" alt="">
 
       <figcaption>Collaboration is key to successful web experience. Death to silos!</figcaption>
 
@@ -91,7 +91,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-2.jpg" target="_blank"><img src="../img/fig-2.jpg" alt=""/></a>
+      <a href="../img/fig-2.jpg" target="_blank"><img src="../img/fig-2.jpg" alt=""></a>
 
       <figcaption>A custom web site workflow.</figcaption>
 
@@ -119,7 +119,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-3.jpg" alt=""/>
+      <img src="../img/fig-3.jpg" alt="">
 
       <figcaption>The new reality. Welcome.</figcaption>
 
@@ -133,7 +133,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-4.jpg" target="_blank"><img src="../img/fig-4.jpg" alt=""/></a>
+      <a href="../img/fig-4.jpg" target="_blank"><img src="../img/fig-4.jpg" alt=""></a>
 
       <figcaption>While this may not look gorgeous, getting our markup right is essential to success. CSS? We don't need no stinkin' CSS (or JavaScript)!</figcaption>
 
@@ -143,7 +143,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-5.jpg" target="_blank"><img src="../img/fig-5.jpg" alt=""/></a>
+      <a href="../img/fig-5.jpg" target="_blank"><img src="../img/fig-5.jpg" alt=""></a>
 
       <figcaption><a href="http://jobsattmp.com">jobsattmp.com</a> as seen on Internet Explorer 8...</figcaption>
 
@@ -153,7 +153,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/doc-brown.jpg" alt=""/>
+      <img src="../img/doc-brown.jpg" alt="">
 
       <figcaption><q>Great Scott! A mobile web site on Internet Explorer 8?!?</q> Yes, Doc Brown, this is progressive enhancement at it's finest!</figcaption>
 
@@ -165,7 +165,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-6.jpg" target="_blank"><img src="../img/fig-6.jpg" alt=""/></a>
+      <a href="../img/fig-6.jpg" target="_blank"><img src="../img/fig-6.jpg" alt=""></a>
 
      <figcaption>All of the bells and whistles our clients love. <a href="http://jobsattmp.com">jobsattmp.com</a> as seen on a modern desktop browser.</figcaption>
 
@@ -175,7 +175,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-7.jpg" alt=""/>
+      <img src="../img/fig-7.jpg" alt="">
 
       <figcaption><a href="http://jobsattmp.com">jobsattmp.com</a> as seen on iOS Safari, Opera Mini, and Chrome.</figcaption>
 
@@ -185,7 +185,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-8.jpg" alt=""/>
+      <img src="../img/fig-8.jpg" alt="">
 
       <figcaption><a href="http://jobsattmp.com">jobsattmp.com</a> as seen on a <strong>2002</strong> HP iPAQ Pocket PC! Insane! Here we have come full circle. This is <em>why</em> we embrace progressive enhancement&mdash;so that anyone, anywhere, on any device, can access our site content.</figcaption>
 
@@ -207,7 +207,7 @@ section: qa
 
     <blockquote>
 
-      <img src="../img/laura-swanson.jpg" alt=""/>
+      <img src="../img/laura-swanson.jpg" alt="">
 
       <p>Performance + Beauty = Overall User Experience</p>
 
@@ -237,12 +237,12 @@ section: qa
 
     <ol>
       <li>Open the developer toolbar by clicking the F12 key or by navigating to the menu icon and selecting Tools > Developer Tools.</li>
-      <li>In the upper right hand corner, select the gear icon <img src="../img/ico-chrome-settings.jpg" class="ico" alt=""/>. This will bring up the toolbar's settings.</li>
+      <li>In the upper right hand corner, select the gear icon <img src="../img/ico-chrome-settings.jpg" class="ico" alt="">. This will bring up the toolbar's settings.</li>
       <li>Select "Disable cache (while DevTools is open)". We always want to ensure that we are seeing all requests, as they will initially be requested from the server.
 
       <figure>
 
-        <a href="../img/fig-11.jpg" target="_blank"><img src="../img/fig-11.jpg" alt=""/></a>
+        <a href="../img/fig-11.jpg" target="_blank"><img src="../img/fig-11.jpg" alt=""></a>
 
         <figcaption>DevTools: A friend to UI Developers AND QA Technicians.</figcaption>
 
@@ -253,7 +253,7 @@ section: qa
 
       <figure>
 
-        <a href="../img/fig-12.jpg" target="_blank"><img src="../img/fig-12.jpg" alt=""/></a>
+        <a href="../img/fig-12.jpg" target="_blank"><img src="../img/fig-12.jpg" alt=""></a>
 
         <figcaption>No, friends don't let friends create 8 megabyte web pages.</figcaption>
 
@@ -325,7 +325,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/fig-9.jpg" alt=""/>
+      <img src="../img/fig-9.jpg" alt="">
 
       <figcaption>Defcon 1! March 1st, 2014 saw the launch of "Responsive" TalentBrew.</figcaption>
 
@@ -385,7 +385,7 @@ section: qa
 
     <figure>
 
-      <a href="../img/fig-10.jpg" target="_blank"><img src="../img/fig-10.jpg" alt=""/></a>
+      <a href="../img/fig-10.jpg" target="_blank"><img src="../img/fig-10.jpg" alt=""></a>
 
       <figcaption>Doing more with less on TalentBrew.</figcaption>
 
@@ -433,7 +433,7 @@ section: qa
 
     <figure>
 
-      <img src="../img/spell-and-plumbot.jpg" alt=""/>
+      <img src="../img/spell-and-plumbot.jpg" alt="">
 
       <figcaption>Plumbot says, <q>01101001101.</q> Translation: <q>I love web standards.</q></figcaption>
 
