--- a/uid/respond-ie8/index.html
+++ b/uid/respond-ie8/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width"/>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
 	<title>Respond II: Responding to IE8</title>
-	<link rel="stylesheet" href="css/global.css"/>
+	<link rel="stylesheet" href="css/global.css">
 	<!--[if lte IE 8 ]>
 		<script src="js/html5shiv.js"></script>
 	<![endif]-->
