--- a/uid/rwd-school-of-rock/rwd-by-the-numbers.html
+++ b/uid/rwd-school-of-rock/rwd-by-the-numbers.html
@@ -71,7 +71,7 @@ title: RWD-By-The-Numbers
 
 		<p>This graph shows impact on bandwidth usage of a heavily-trafficked careers site before and after the addition of a large image carousel on the homepage. The spike in bandwidth after the introduction of the feature was not due to increased user traffic - it was due to downloads of the carousel images.</p>
 
-		<img id="bandwidth" src="img/bandwidth.jpg" alt="bandwidth usage chart before/after introduction of image carousel"/>
+		<img id="bandwidth" src="img/bandwidth.jpg" alt="bandwidth usage chart before/after introduction of image carousel">
 
 		<p>Increased bandwidth usage translates to higher hosting costs. <strong>The 4 images in the site's carousel were adding an additional $3,600 per year to operating costs.</strong></p>
 
