--- a/support/index.html
+++ b/support/index.html
@@ -1,18 +1,22 @@
+---
+layout: null
+---
+
 <p class="effective-date">Last updated <time>September 25th, 2020</time></p>
 
 <h2 id="web-standards">Web Standards</h2>
 
-<p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, Radancy can craft an experience that is both engaging and accessible to all users.</p>
+<p>Our design and development methodologies adhere to standards and guidelines proposed by the <a href="https://www.w3c.org/">W3C (World Wide Web Consortium)</a> and best practices found within the design and development community. By using the most modern and inclusive techniques available, {{ site.company-name }} can craft an experience that is both engaging and accessible to all users.</p>
 
-<p>To learn more about our <a href="https://radancy.dev/">design and development standards</a>, please visit us on GitHub.</p>
+<p>To learn more about our <a href="{{ site.company-url }}">design and development standards</a>, please visit us on GitHub.</p>
 
 <h2 id="accessibility">Accessibility</h2>
 
-<p>At Radancy, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individual’s right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
+<p>At {{ site.company-name }}, we believe that all of your prospective job candidates, regardless of physical, mental or technological capabilities, have a right to learn more about your company and access all job listings. To preserve an individual’s right to universal access, we <em>attempt</em> to meet as much of <strong>WCAG (Web Content and Accessibility Guidelines) 2.1 Level A and AA</strong> as possible, within our everyday process. However, if there is a need to fully support WCAG or other specific guidelines, please bring this to the attention of your account representative as soon as possible.</p>
 
 <h2 id="operating-system-support">Operating System Support</h2>
 
-<p>Radancy supports applications on the following operating systems only:</p>
+<p>{{ site.company-name }} supports applications on the following operating systems only:</p>
 
 <ul>
   <li>Windows 10</li>
@@ -27,7 +31,7 @@
 
 <h2 id="browser-support">Browser Support</h2>
 
-<p>Radancy supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date in which your project has launched, we test all work in the following:</p>
+<p>{{ site.company-name }} supports the <strong>current</strong> and <strong>prior major</strong> release versions of all major browsers. Corresponding to the date in which your project has launched, we test all work in the following:</p>
 
 <ul>
   <li><a href="https://www.chromestatus.com/features/schedule/">Google Chrome</a></li>
